Fix discuss question items overflowing out

--- a/SoloLearn/app/Scripts/styles/Discuss/Questions.scss
+++ b/SoloLearn/app/Scripts/styles/Discuss/Questions.scss
@@ -3,5 +3,6 @@
 	padding-top: 15px;
 	.discuss-wrapper {
 		flex-direction: row;
+		justify-content: flex-start;
 	}
 }
